# goblin-engine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.clangd/index/: app.cc.9D40E87DEFE0991B.idx  app.h.777044EE41B62C89.idx  bufrend.cc.79BC94923F7A4117.idx  bufrend.h.D3B67C5E9D93E26F.idx  camera.cc.F8EBDEAD59FB12B5.idx  (+87 more)
TestApp/: Source.cpp  TestApp.vcxproj
engine/: CMakeLists.txt  Makefile  cmake_install.cmake
engine/core/: Makefile  (+3 more)
engine/physics/: CMakeLists.txt
exts/: CMakeLists.txt  Makefile  cmake_install.cmake
exts/glew/: Makefile  cmake_install.cmake
exts/glfw/: Makefile  cmake_install.cmake
exts/glfw/src/: Makefile  cmake_install.cmake
exts/stb/: CMakeLists.txt  stb.cc
projects/: '  Makefile  cmake_install.cmake  s1.vim  session.vim
projects/MeshResource/: CMakeLists.txt  Makefile  cmake_install.cmake
projects/MeshResource/code/: cam_mgr.cc  cam_mgr.h  camera.cc  camera.h  def_rend.cc  def_rend.h  fwd_rend.cc  fwd_rend.h  gltf_loader.cc  gltf_loader.h  light.cc  light.h  light_mgr.cc  loader.cc  loader.h  material.cc  material.h  mesh.cc  mesh.h  mesh_res.cc  mesh_res.h  node.cc  node.h  program.cc  program.h  rend_set.h  shader_res.cc  shader_res.h  swrast.cc  swrast.h  tex_res.cc  tex_res.h  transform.cc  transform.h  vertex.h
projects/MeshResource/doc/html/: classes.html  files.html  structefiilj_1_1_vertex-members.html  structefiilj_1_1_vertex.html
projects/MeshResource/doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  classes_1.js  functions_2.js  searchdata.js
projects/MeshResource/doc/latex/: structefiilj_1_1_vertex.tex
projects/QuadTest/: CMakeLists.txt  Makefile  QuadTest  cmake_install.cmake
projects/QuadTest/code/: main.cc  meshtf.h  quadtest.cc  quadtest.h
projects/QuadTest/res/meshes/: cat.obj2
projects/QuadTest/res/shaders/: avocado.fragment  dfs_geometry.glsl  dfs_lighting.glsl  dvs_geometry.glsl  fragment.shader  geometry.fragment  gltf.fragment  gltf.vertex  vertex.shader  vs_gltf.glsl
projects/Rasterizer/: CMakeLists.txt  Makefile  cmake_install.cmake
projects/Rasterizer/code/: bufrend.cc  bufrend.h  line.cc  line.h  rnode.h  swrast.cc  swrast.h  swtdata.cc  swtdata.h
projects/TestApp/: CMakeLists.txt  Source.cpp  TestApp.vcxproj  TestApp.vcxproj.filters
projects/TestApp/code/: Source.cc
projects/VectorLib/: CMakeLists.txt  Makefile  VectorLib.sln  cmake_install.cmake
projects/VectorLib/code/: matrix2.h  matrix3.h  matrix4.h  vector2.h  vector3.h  vector4.h
projects/VectorLib/doc/: doxyfile
projects/VectorLib/doc/html/: annotated.html  classefiilj_1_1_matrix2-members.html  classefiilj_1_1_matrix4-members.html  classefiilj_1_1_vector2-members.html  classefiilj_1_1_vector3.html  classefiilj_1_1_vector4.html  classefiilj_1_1_vector4.js  dir_050edd66366d13764f98250ef6db77f6.html  matrix2_8h_source.html  vector2_8h_source.html  vector3_8h_source.html
projects/VectorLib/doc/html/search/: all_0.js  all_7.js  functions_b.js
projects/VectorLib/doc/latex/: classefiilj_1_1_matrix2.tex  classefiilj_1_1_matrix3.tex
projects/VectorLib/output/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  cmake_install.cmake
projects/app/: CMakeLists.txt
projects/app/code/: app.cc  app.h  dbg_rend.cc  dbg_rend.h  editor.cc  editor.h  gui_matedit.h  main.cc  script_mgr.cc  script_mgr.h  session.vim
projects/ecs/: CMakeLists.txt
projects/ecs/code/: comp.h  eid.h  entity.bind.cc  entity.cc  entity.h  ifmgr.h  manager.cc  manager.h  meta_mgr.cc  meta_mgr.h  mgr_host.bind.cc  mgr_host.cc  mgr_host.h  mgrdata.h  msg.h  server.h
projects/gltf/: CMakeLists.txt
projects/gltf/code/: gltf_exts.h  gltf_loader.cc  gltf_loader.h  regex_exts.h  sdr_loader.cc  sdr_loader.h
projects/graphics/: CMakeLists.txt
projects/graphics/code/: bbox.cc  bbox.h  cam_mgr.cc  cam_mgr.h  camera.cc  camera.h  col_data.cc  col_data.h  cube.cc  cube.h  def_rend.cc  def_rend.h  fwd_rend.cc  fwd_rend.h  gltf_loader.cc  gltf_loader.h  grph_mgr.cc  grph_mgr.h  lght_mgr.bind.cc  lght_mgr.cc  lght_mgr.h  light.cc  light.h  light_mgr.h  line.cc  line.h  loader.cc  loader.h  material.cc  material.h  mesh_mgr.cc  mesh_mgr.h  mesh_res.cc  mesh_res.h  mesh_srv.cc  mesh_srv.h  mesh_srv_prim.cc  mtrl_mgr.cc  mtrl_mgr.h  mtrl_srv.cc  (+21 more)
projects/graphics/doc/html/: annotated.html  classefiilj_1_1_mesh_resource-members.html  classefiilj_1_1_mesh_resource.html  dir_050edd66366d13764f98250ef6db77f6.html  functions.html  functions_func.html  index.html  mesh_8h_source.html
projects/graphics/doc/html/search/: all_0.js  classes_0.js  functions_0.js  functions_1.js  functions_3.js
projects/graphics/doc/latex/: annotated.tex  classefiilj_1_1_mesh_resource.tex  refman.tex
projects/lab1/: CMakeLists.txt
projects/lab1/code/: app.cc
projects/math/: CMakeLists.txt
projects/math/code/: bounds.h  math_test.h  mathutils.h  matrix2.h  matrix3.h  matrix4.h  plane.h  quat.cc  quat.h  ray.h  session.vim  transform.cc  transform.h  trfm_mgr.bind.cc  trfm_mgr.cc  trfm_mgr.h  vector2.h  vector3.cc  vector3.h  vector3_op.cc  vector3_op.h  vector4.h  vectorlib.cc
projects/math/doc/html/: classefiilj_1_1_matrix2.html  classefiilj_1_1_matrix2.js  classefiilj_1_1_matrix3-members.html  classefiilj_1_1_matrix3.html  classefiilj_1_1_matrix4.html  classefiilj_1_1_vector2.html  classefiilj_1_1_vector2.js  classefiilj_1_1_vector3-members.html  matrix3_8h_source.html  matrix4_8h_source.html  vector4_8h_source.html
projects/math/doc/html/search/: all_1.js  all_2.js  all_4.js  all_a.js  classes_0.js  functions_6.js  functions_7.js  functions_8.js
projects/math/doc/latex/: annotated.tex  classefiilj_1_1_matrix4.tex  classefiilj_1_1_vector2.tex  classefiilj_1_1_vector3.tex  classefiilj_1_1_vector4.tex
projects/physics/: CMakeLists.txt
projects/physics/code/: bbox.cc  bbox.h  phys_data.cc  phys_data.h  phys_mesh.cc  phys_mesh.h  phys_scene.h  sim.cc  sim.h
projects/rasterizer/: CMakeLists.txt
projects/rasterizer/code/: bufrend.cc  color.h  line.cc  rnode.cc  swrast.cc  swrast.h  swtdata.cc  swtdata.h
(+141 files in other folders)
